--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,17 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--jstl-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <profiles>
     </profiles>
