HW06 implements JspMealController

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,18 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+meal.add=Add meal
+meal.create=Create
+meal.edit=Edit
+meal.save=Save
+meal.canсel=Cancel
+meal.filter=Filter
+meal.update=Update
+meal.delete=Delete
+meal.dateTime=Date and time
+meal.description=Description
+meal.calories=Calories
+meal.fromDate=From date
+meal.toDate=To date
+meal.fromTime=From time
+meal.toTime=To time
